--- a/style.css
+++ b/style.css
@@ -9,8 +9,11 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #333;
+    /* background-color: #333; */
     font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.2) 100%) ,url(./img/bateria.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h1 {
@@ -32,6 +35,7 @@ h1 {
     align-items: center;
     font-size: 30px;
     font-weight: bold;
+    cursor: pointer;
 }
 .key.active {
     border: 2px solid #FF0;
@@ -59,7 +63,9 @@ h1 {
     cursor: pointer;
 }
 .composer button:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    /* background-color: rgba(0, 0, 0, 0.2); */
+    border: 2px solid #FF0;
+    color: #FF0;
 }
 
 footer {
